// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyMetrics Snapshot renders correctly while loading 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,s,n,m,o,l,u,h)=&gt;{let a=document.documentElement,v=["light","dark"];function p(c){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&l?o.map(f=&gt;l[f]||f):o;k?(a.classList.remove(...S),a.classList.add(c)):a.setAttribute(y,c)}),C(c)}function C(c){h&&v.includes(c)&&(a.style.colorScheme=c)}function d(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(m)p(m);else try{let c=localStorage.getItem(s)||n,y=u&&c==="system"?d():c;p(y)}catch(c){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-13vdia"
  >
    <div
      class="css-1b8npii"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1cteixr"
        >
          <svg
            class="lucide lucide-dollar-sign"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Ganancias
      </p>
      <div
        class="css-1vhhqj7"
      >
        <span
          class="chakra-spinner css-15lzuyp"
        />
      </div>
    </div>
    <div
      class="css-ctvivy"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1lsb2en"
        >
          <svg
            class="lucide lucide-scissors"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="6"
              cy="6"
              r="3"
            />
            <path
              d="M8.12 8.12 12 12"
            />
            <path
              d="M20 4 8.12 15.88"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <path
              d="M14.8 14.8 20 20"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Servicios
      </p>
      <div
        class="css-1vhhqj7"
      >
        <span
          class="chakra-spinner css-1uxiipu"
        />
      </div>
    </div>
    <div
      class="css-1b8npii"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1cteixr"
        >
          <svg
            class="lucide lucide-circle-check-big"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.801 10A10 10 0 1 1 17 3.335"
            />
            <path
              d="m9 11 3 3L22 4"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Citas completadas
      </p>
      <div
        class="css-1vhhqj7"
      >
        <span
          class="chakra-spinner css-15lzuyp"
        />
      </div>
    </div>
    <div
      class="css-122d0pt"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1lgm3s8"
        >
          <svg
            class="lucide lucide-circle-x"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Citas canceladas
      </p>
      <div
        class="css-1vhhqj7"
      >
        <span
          class="chakra-spinner css-e3hgfy"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KeyMetrics Snapshot renders correctly with statistics data 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,s,n,m,o,l,u,h)=&gt;{let a=document.documentElement,v=["light","dark"];function p(c){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&l?o.map(f=&gt;l[f]||f):o;k?(a.classList.remove(...S),a.classList.add(c)):a.setAttribute(y,c)}),C(c)}function C(c){h&&v.includes(c)&&(a.style.colorScheme=c)}function d(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(m)p(m);else try{let c=localStorage.getItem(s)||n,y=u&&c==="system"?d():c;p(y)}catch(c){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-13vdia"
  >
    <div
      class="css-1b8npii"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1cteixr"
        >
          <svg
            class="lucide lucide-dollar-sign"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Ganancias
      </p>
      <div
        class="css-1vhhqj7"
      >
        <p
          class="css-158617b"
        >
          1234.56
        </p>
      </div>
    </div>
    <div
      class="css-ctvivy"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1lsb2en"
        >
          <svg
            class="lucide lucide-scissors"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="6"
              cy="6"
              r="3"
            />
            <path
              d="M8.12 8.12 12 12"
            />
            <path
              d="M20 4 8.12 15.88"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <path
              d="M14.8 14.8 20 20"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Servicios
      </p>
      <div
        class="css-1vhhqj7"
      >
        <p
          class="css-158617b"
        >
          78
        </p>
      </div>
    </div>
    <div
      class="css-1b8npii"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1cteixr"
        >
          <svg
            class="lucide lucide-circle-check-big"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.801 10A10 10 0 1 1 17 3.335"
            />
            <path
              d="m9 11 3 3L22 4"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Citas completadas
      </p>
      <div
        class="css-1vhhqj7"
      >
        <p
          class="css-158617b"
        >
          65
        </p>
      </div>
    </div>
    <div
      class="css-122d0pt"
    >
      <div
        class="css-1y96gi1"
      >
        <div
          class="css-1lgm3s8"
        >
          <svg
            class="lucide lucide-circle-x"
            fill="none"
            height="24"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
        </div>
      </div>
      <p
        class="css-ycbeac"
      >
        Citas canceladas
      </p>
      <div
        class="css-1vhhqj7"
      >
        <p
          class="css-158617b"
        >
          13
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
